hotfix(micro servico): refatoração de codigo
